# nrf24l01

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/: script.sh
src/: constants.rs  lib.rs
