[package]
authors = ["Maikel Wever <maikel@maikelwever.nl>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the nRF24L01 (2.4GHz wireless)"
keywords = ["embedded-hal-driver", "nrf24l01", "mirf"]
license = "MIT"
name = "nrf24l01"
repository = "https://github.com/maikelwever/nrf24l01"
version = "0.0.1"
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
